# Lanelet2_Routing

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/: liblanelet2_core.so.1  liblanelet2_io.so.1  liblanelet2_matching.so.1  liblanelet2_matching.so.1.2.2  liblanelet2_projection.so.1  liblanelet2_projection.so.1.2.2  liblanelet2_routing.so.1  liblanelet2_traffic_rules.so.1  liblanelet2_traffic_rules.so.1.2.2  liblanelet2_validation.so.1  liblanelet2_validation.so.1.2.2
devel/lib/lanelet2_examples/: 01_dealing_with_lanelet_primitives  02_regulatory_elements  03_lanelet_map  04_reading_and_writing  05_traffic_rules  06_routing  07_matching
devel/lib/lanelet2_validation/: lanelet2_validate
devel/lib/map_creation/: map_main
devel/lib/path_setter/: main
devel/lib/pkgconfig/: map_creation.pc  path_setter.pc
devel/share/lanelet2_core/cmake/: lanelet2_coreTargets.cmake
devel/share/lanelet2_io/cmake/: lanelet2_ioTargets.cmake
devel/share/lanelet2_maps/cmake/: lanelet2_mapsTargets.cmake
devel/share/lanelet2_matching/cmake/: lanelet2_matchingTargets.cmake
devel/share/lanelet2_projection/cmake/: lanelet2_projectionTargets.cmake
devel/share/lanelet2_python/cmake/: lanelet2_pythonTargets.cmake
devel/share/lanelet2_routing/cmake/: lanelet2_routingTargets.cmake
devel/share/lanelet2_traffic_rules/cmake/: lanelet2_traffic_rulesTargets.cmake
devel/share/lanelet2_validation/cmake/: lanelet2_validationTargets.cmake
devel/share/map_creation/cmake/: map_creationConfig.cmake
devel/share/path_setter/cmake/: path_setterConfig.cmake
src/map_creation/: CMakeLists.txt  package.xml
src/map_creation/maps/: robotaksi.osm  saved_map.osm
src/map_creation/src/: main.cpp  map_loader.cpp  map_visual.cpp
src/path_setter/: CMakeLists.txt
src/path_setter/launch/: path_visual.launch
src/path_setter/rviz_reader_templates/src/: goal_fetcher.cpp  overtake_fetcher.cpp  start_fetcher.cpp
src/path_setter/src/: goal_lane.cpp  main.cpp  overtake_lane.cpp  route_finder.cpp  start_lane.cpp
