<?xml version="1.0"?>
<package format="2">
  <name>map_creation</name>
  <version>0.1.0</version>
  <description>Lanelet2 Visualization</description>

  <maintainer email="your_email@example.com">Kubilay Kayra Kıvrak</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <depend>roscpp</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_routing</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

